<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ly_connection"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_title"
                />

            <ImageView
                android:id="@+id/iv_photo"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:visibility="gone"
                android:contentDescription="@string/photo" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp"
                >

                <Button
                    android:id="@+id/btn_take_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo"
                    tools:ignore="ButtonStyle"
                    />

                <Button
                    android:id="@+id/btn_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remove_photo"
                    android:visibility="gone"
                    tools:ignore="ButtonStyle"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_title"
                />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:hint="@string/title"
                android:autofillHints=""
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/length"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_length"
                />

            <EditText
                android:id="@+id/et_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_length"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/width"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_width"
                />

            <EditText
                android:id="@+id/et_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_width"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_height"
                />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_height"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_wheel_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wheel_base"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_wheel_base"
                />

            <EditText
                android:id="@+id/et_wheel_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_wheel_base"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tv_foh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/foh"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_foh"
                />

            <EditText
                android:id="@+id/et_foh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_foh"
                android:autofillHints=""
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_roh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roh"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_roh"
                />

            <EditText
                android:id="@+id/et_roh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_roh"
                android:autofillHints=""
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_approach_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/approach_angle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_approach_angle"
                />

            <EditText
                android:id="@+id/et_approach_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_approach_angle"
                android:autofillHints=""
                tools:ignore="LabelFor" />


            <TextView
                android:id="@+id/tv_departure_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/departure_angle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:labelFor="@id/et_departure_angle"
                />

            <EditText
                android:id="@+id/et_departure_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/hint_departure_angle"
                android:autofillHints=""
                tools:ignore="LabelFor" />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@color/blue"
                android:textColor="@android:color/white"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@drawable/card"
        android:alpha=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ly_connection"
        />

    <LinearLayout
        android:id="@+id/ly_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:id="@+id/ly_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:orientation="horizontal"
            android:layout_weight="2"
            >

            <ImageView
                android:id="@+id/ic_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_check_24"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/status_icon_desc" />

            <ProgressBar
                android:id="@+id/pb_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/connected"
                    />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/hw_address"
                    android:alpha="0.5"
                    android:textSize="@dimen/font_sm"
                    />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:background="@color/blue"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>