<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity"
    >

    <ImageView
        android:id="@+id/icon_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintEnd_toStartOf="@id/tv_title"
        android:contentDescription="@string/app_icon"
        />

    <ImageView
        android:id="@+id/icon_fg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="@id/icon_bg"
        app:layout_constraintEnd_toEndOf="@id/icon_bg"
        app:layout_constraintTop_toTopOf="@id/icon_bg"
        app:layout_constraintBottom_toBottomOf="@id/icon_bg"
        android:contentDescription="@string/app_icon"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/icon_bg"
        app:layout_constraintTop_toTopOf="@id/icon_bg"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textSize="26sp"
        android:alpha=".5"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        />


    <TextView
        android:id="@+id/tv_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Panduan Penggunaan Aplikasi...."
        android:layout_marginTop="@dimen/margin_md"
        app:layout_constraintTop_toBottomOf="@id/icon_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="#007bff"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>