<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginHorizontal="@dimen/margin_md"
    android:layout_marginTop="@dimen/margin_md"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/photo"
        />

    <TextView
        android:id="@+id/tv_image_not_found"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_image"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/iv_thumbnail"
        app:layout_constraintEnd_toEndOf="@id/iv_thumbnail"
        app:layout_constraintTop_toTopOf="@id/iv_thumbnail"
        app:layout_constraintBottom_toBottomOf="@id/iv_thumbnail"
        />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="GL 2565 WHQ"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_l"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginTop="@dimen/margin_md"
        app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        />


    <TextView
        android:id="@+id/tv_length_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="259.5"
        android:textSize="@dimen/font_l"
        android:alpha=".8"
        android:layout_marginStart="@dimen/margin_md"
        android:layout_marginTop="@dimen/margin_md"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
        tools:ignore="HardcodedText"
        />


    <TextView
        android:id="@+id/tv_length_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_unit"
        android:textSize="@dimen/font_sm"
        android:layout_marginStart="3dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toTopOf="@id/tv_length_label"
        app:layout_constraintStart_toEndOf="@id/tv_length_value"
        />

    <TextView
        android:id="@+id/tv_length_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_length_label"
        android:textSize="@dimen/font_sm"
        android:alpha="0.5"
        android:layout_marginStart="@dimen/margin_md"
        app:layout_constraintTop_toBottomOf="@id/tv_length_value"
        app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
        />

    <View
        android:id="@+id/sep_1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:alpha=".5"
        android:layout_marginVertical="@dimen/margin_md"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
        app:layout_constraintEnd_toStartOf="@id/sep_2"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/ly_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/sep_1"
        app:layout_constraintEnd_toStartOf="@id/sep_2"
        >


        <TextView
            android:id="@+id/tv_width_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="259.5"
            android:textSize="@dimen/font_l"
            android:alpha=".8"
            android:layout_marginTop="@dimen/margin_md"
            tools:ignore="HardcodedText"
            />


        <TextView
            android:id="@+id/tv_width_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:text="@string/current_unit"
            android:textSize="@dimen/font_sm"
            android:layout_marginStart="3dp"
            android:layout_gravity="bottom"
            />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_width_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_width_label"
        android:textSize="@dimen/font_sm"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/ly_width"
        app:layout_constraintStart_toEndOf="@id/sep_1"
        app:layout_constraintEnd_toStartOf="@id/sep_2"
        />

    <View
        android:id="@+id/sep_2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:layout_marginVertical="@dimen/margin_md"
        android:alpha=".5"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/sep_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <TextView
        android:id="@+id/tv_height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="259.5"
        android:textSize="@dimen/font_l"
        android:alpha=".8"
        android:layout_marginTop="@dimen/margin_md"
        android:layout_marginEnd="3dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toStartOf="@id/tv_height_unit"
        tools:ignore="HardcodedText"
        />


    <TextView
        android:id="@+id/tv_height_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_unit"
        android:textSize="@dimen/font_sm"
        android:alpha="0.5"
        android:layout_marginEnd="@dimen/margin_md"
        app:layout_constraintBottom_toTopOf="@id/tv_height_label"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_height_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_height_label"
        android:textSize="12sp"
        android:alpha="0.5"
        android:layout_marginEnd="@dimen/margin_md"
        app:layout_constraintTop_toBottomOf="@id/tv_height_value"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>